[tool.poetry]
name = "onemap-py"
version = "0.2.0"
description = "Python wrapper for SLA's OneMap API"
authors = ["tauculator"]
readme = "readme.md"
repository = "https://github.com/tauhlim/onemap-py"

[tool.poetry.dependencies]
python = "^3.6"
pypolyline = "^0.2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
